# SklavaBot

./: .gitignore  CMakeLists.txt  CNAME  README.md  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  build.ninja  build.sh  commands_8cpp.html  commands_8cpp.js  commands_8cpp_source.html  commands_8hpp.html  commands_8hpp.js  commands_8hpp_source.html  config_8hpp.html  config_8hpp.js  config_8hpp_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_017ad5e908c41501f6a06b5119b37293.js  dir_42d94e65713ad4cab42a72005b18f6d0.html  dir_42d94e65713ad4cab42a72005b18f6d0.js  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5a30104352ef4255dc24354b02eb2d20.js  dir_83fcfd4b4ab617b4f740bb9001a089e5.html  dir_83fcfd4b4ab617b4f740bb9001a089e5.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  dir_a065c5f60305fee3569f887679366939.js  error__codes_8hpp.html  error__codes_8hpp.js  error__codes_8hpp_source.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main.cpp  (+32 more)
lib/: CMakeLists.txt
lib/include/: commands.hpp  config.hpp  error_codes.hpp  metar.hpp  ocr.hpp  utils.hpp
lib/src/: commands.cpp  metar.cpp  ocr.cpp  utils.cpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_2.js  defines_5.js  defines_6.js  defines_9.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  variables_1.js  variables_4.js
